# rediska

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: commands.md  (+1 more)
services/core/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/core/alembic/: env.py
services/core/alembic/versions/: 001_initial_schema.py  002_multi_agent_analysis.py  003_add_cancelled_job_status.py  004_add_scout_watch.py  005_add_scout_audit_fields.py  006_analysis_recommendation_to_text.py  007_add_scout_quick_analysis_prompt.py  008_scout_watch_summaries.py  009_add_summary_prompts.py  010_add_lead_summaries.py  011_add_dimension_results_to_scout_posts.py  012_add_profile_item_metadata.py  013_add_post_body_to_scout_watch_posts.py  014_add_send_failed_visibility.py  015_add_starred_and_backfill_states.py
services/core/rediska_core/: __init__.py  config.py  main.py
services/core/rediska_core/api/: deps.py
services/core/rediska_core/api/middleware/: __init__.py  onboarding.py
services/core/rediska_core/domain/: pagination.py  query_limits.py
services/core/rediska_core/infra/: db.py
services/core/rediska_core/infrastructure/: __init__.py  crypto.py  elasticsearch.py  embeddings.py  rate_limiter.py
services/core/rediska_core/observability/: __init__.py  logging.py  metrics.py
services/core/rediska_core/providers/: __init__.py  base.py
services/core/scripts/: seed_conversations.py
services/core/tests/: TEST_COVERAGE_MULTI_AGENT.md  __init__.py  conftest.py  factories.py  test_agent_harness_unit.py  test_agent_integration.py  test_agent_prompt_service_unit.py  test_analysis_service_unit.py  test_attachment_integration.py  test_attachment_unit.py  test_audit_integration.py  test_audit_unit.py  test_auth_integration.py  test_auth_unit.py  test_browse_service_unit.py  test_conversation_integration.py  test_credentials_unit.py  test_crypto_unit.py  test_data_safety_unit.py  test_directory_integration.py  test_directory_service_unit.py  test_draft_intro_agent_unit.py  test_draft_intro_integration.py  test_duplicate_detection_integration.py  test_duplicate_detection_unit.py  test_e2e_critical_flows.py  test_elasticsearch_unit.py  test_embed_task_unit.py  test_embeddings_unit.py  test_health_integration.py  test_health_unit.py  test_identity_integration.py  test_identity_unit.py  test_index_service_unit.py  test_inference_client_unit.py  test_ingest_backfill_unit.py  test_ingest_persistence_unit.py  test_ingest_sync_unit.py  test_jobs_unit.py  test_lead_scoring_agent_unit.py  (+31 more)
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/rediska_worker/: __init__.py  celery_app.py
services/worker/rediska_worker/tasks/: __init__.py  agent.py  embed.py  index.py  ingest.py  maintenance.py  message.py  multi_agent_analysis.py  scout.py
services/worker/rediska_worker/util/: idempotency.py  retry.py
services/worker/tests/: __init__.py  conftest.py  test_agent_unit.py  test_idempotency_unit.py  test_ingest_unit.py  test_maintenance_unit.py  test_message_unit.py  test_multi_agent_analysis_tasks.py  test_retry_unit.py
(+252 files in other folders)
