[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rediska-worker"
version = "0.1.0"
description = "Rediska Celery Worker Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.26.0",
    "elasticsearch>=8.12.0,<9.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rediska_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
